[tool.poetry]
name = "ecrespo.github.io"
version = "0.1.0"
description = ""
authors = ["Ernesto Crespo <ecrespo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
pelican = {extras = ["markdown"], version = "^4.8.0"}
feedparser = "^6.0.8"
bs4 = "^0.0.1"
typogrify = "^2.0.7"
invoke = "^2.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
