[project]
name = "ecrespo-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "feedparser>=6.0.11",
    "ghp-import>=2.1.0",
    "invoke>=2.2.0",
    "markdown>=3.8.2",
    "pelican>=4.11.0",
    "typogrify>=2.1.0",
]
